--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "start": "node app.js",
+    "deploy": "gcloud -q app deploy",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --config webpack.config.server.js --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "lru-cache": "^4.1.3",
+    "vue": "^2.5.11",
+    "vue-server-renderer": "^2.5.16"
   },
   "browserslist": [
     "> 1%",
@@ -24,10 +28,15 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
+    "html-webpack-plugin": "^3.2.0",
     "vue-loader": "^13.0.5",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
