--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --config webpack.config.server.js --progress --hide-modules"
   },
   "dependencies": {
+    "@google-cloud/logging-bunyan": "^0.8.2",
+    "bunyan": "^1.8.12",
     "lru-cache": "^4.1.3",
     "vue": "^2.5.11",
     "vue-server-renderer": "^2.5.16"
